[project]
name = "py-cdp-reactive-flow-bot"
version = "0.1.0"
description = "Python Reactive RxPy flow"
readme = "README.md"
authors = [
  {name = "yishenggudou", email = "yishenggudou@gmail.com"}
]
maintainers = [
  {name = "yishenggudou", email = "yishenggudou@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/yishenggudou/py_cdp_reactive_flow_bot/issues"
changelog = "https://github.com/yishenggudou/py_cdp_reactive_flow_bot/blob/master/changelog.md"
homepage = "https://github.com/yishenggudou/py_cdp_reactive_flow_bot"

[project.scripts]
py_cdp_reactive_flow_bot = "py_cdp_reactive_flow_bot.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
